# setup-ocaml-project-with-dune

./: README.md  dune-project
lib/: dune
test/: dune
